   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2026/01/26:
- TestEngine: rework logic for aiming at an iten in a covered window to
  move covering windows if the target window cannot be brought to front.
  In particular, it fixes issues when programmatic code is stealing focus.

2025/12/19:
- TestEngine: ctx->WindowResize(): passing 0.0f keep existing size of for
  a given axis, vs passing < 0.0f auto-resize for this axis.
- TestEngine: UI: clicking "Run" again stop current test.

2025/12/11:
- TestEngine: fixes for changes in 1.92.6.
- TestEngine: added TableSetColumnEnabled() by column index helper.

2025/10/29:
- TestEngine: fixed an issue when mouse position after running a series of test
  may be temporarily reverted to the one before starting the test. This was not
  noticeable on backends which would keep submitting latest mouse position.

2025/10/08:
- TestEngine: added TeardownFunc facility to setup a driving function which
  will run even if the test fails. (#82)
- TestEngine: IM_CHECK_FLOAT_xx compare operators using epsilon now display input values
  in the log instead of the fabs(a-b) result.
- TestEngine: added IM_CHECK_DOUBLE_EQ, IM_CHECK_DOUBLE_NE check macros.
- TestEngine: *BREAKING* renamed check macros as the suffix was unnecessary.
    IM_CHECK_FLOAT_EQ_EPS --> IM_CHECK_FLOAT_EQ
    IM_CHECK_FLOAT_NE_EPS --> IM_CHECK_FLOAT_NE.
  Kept inline redirection macros.
- TestEngine: *BREAKING* obsoleted IM_CHECK_FLOAT_NEAR / IM_CHECK_FLOAT_NEAR_NO_RET
  check macros which were ambiguous. Kept inline redirection macros.
    IM_CHECK_FLOAT_NEAR(A, B, 100.0f) --> IM_CHECK(fabs(a - b) <= 100.0f)

2025/10/01:
- TestEngine: fixed recovering from situation where TestFunc changed current context.

2025/09/22:
- TestEngine: added test_io.ConfigLogToFunc hook to serially log all output (rather than
  peeking into the individual log output of each test).